--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "rootDir": "src"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist"]
-} 
+  "exclude": ["node_modules", "dist", "**/*.stories.tsx", "**/*.stories.ts", "**/*.stories.mdx", ".storybook"]
+}
