Update Vercel configuration for Storybook deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,12 @@
 {
   "version": 2,
-  "buildCommand": "yarn build:vercel",
-  "outputDirectory": "storybook-static"
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "storybook-static"
+      }
+    }
+  ]
 }
