--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,5 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "storybook-static"
-      }
-    }
-  ]
+  "buildCommand": "yarn build:vercel",
+  "outputDirectory": "storybook-static"
 }
