--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,9 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
+# Storybook build output
+storybook-static
+
 # yarn v2
 .yarn/cache
 .yarn/unplugged
