--- a/.eslintignore
+++ b/.eslintignore
@@ -13,6 +13,7 @@ pnpm-lock.yaml
 # Other
 .git
 .github
+.storybook
 coverage
 *.log
 
@@ -20,4 +21,4 @@ coverage
 demo
 
 # Generated files
-*.d.ts 
+*.d.ts
