--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   ],
   "scripts": {
     "build": "yarn clean && rollup -c",
+    "build:npm": "npm run clean && rollup -c",
     "build:storybook": "storybook build",
     "build:vercel": "storybook build",
     "dev": "rollup -c -w",
     "clean": "rimraf dist",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "lint": "eslint src --ext .ts,.tsx",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "prepare": "yarn build",
+    "prepublishOnly": "npm run build:npm && npm test",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -30,6 +32,7 @@
     "@storybook/addon-links": "^10.1.11",
     "@storybook/react": "^10.1.11",
     "@storybook/react-vite": "^10.1.11",
+    "@types/jest": "^30.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
@@ -39,6 +42,8 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "10.1.11",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "prettier": "^3.2.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -46,6 +51,7 @@
     "rollup": "^4.9.6",
     "rollup-plugin-typescript2": "^0.36.0",
     "storybook": "^10.1.11",
+    "ts-jest": "^29.4.6",
     "typescript": "^5.8.3",
     "vite": "^7.2.6"
   },
